<resources>
    <string name="app_name">Asigurari Auto</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Parola</string>
    <string name="hint_surname">Nume</string>
    <string name="hint_name">Prenume</string>
    <string name="hint_address">Adresa</string>
    <string name="hint_phone">Telefon</string>

    <string name="btn_login">Log In</string>
    <string name="btn_register">Register</string>
    <string name="btn_back">Go Back</string>
    <string name="btn_logout">Log Out</string>
    <string name="btn_submit">Submit</string>
    <string name="textError">Login Failed</string>
    <string name="loginSuccess">Login Successful</string>
    <string name="msg_welcome">Bună ziua</string>

    <string name="placeholder_1">profil</string>
    <string name="placeholder_2">asigurari</string>
    <string name="placeholder_3">status</string>
    <string name="placeholder_4">rca</string>
    <string name="status_ci">Status CI:</string>
    <string name="status_car">Status Talon:</string>
    <string name="status_nonexistent">Inexistent</string>
    <string name="status_ok">OK</string>
    <string name="test_uid">UID:</string>
    <string name="choose">Selecteaza</string>
    <string name="upload">Upload</string>
    <string name="msg_ci_upload">Upload: Carte Identitate</string>
    <string name="msg_talon_upload">Upload: Talon</string>
</resources>
