<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg_gradient"
    android:fitsSystemWindows="true"
    tools:context=".activity.RegisterActivity" >

    <LinearLayout
        android:id="@+id/input_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_above="@id/submit_button"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <EditText
            android:id="@+id/surname_input"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="@dimen/layout_vertical_margin"
            android:background="@drawable/input_text_rounded"
            android:bottomLeftRadius="50dp"
            android:bottomRightRadius="15dp"
            android:ems="10"
            android:hint="@string/hint_surname"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="@dimen/layout_vertical_margin"
            android:background="@drawable/input_text_rounded"
            android:bottomLeftRadius="50dp"
            android:bottomRightRadius="15dp"
            android:ems="10"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/address_input"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="@dimen/layout_vertical_margin"
            android:background="@drawable/input_text_rounded"
            android:bottomLeftRadius="50dp"
            android:bottomRightRadius="15dp"
            android:ems="10"
            android:hint="@string/hint_address"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="@dimen/layout_vertical_margin"
            android:background="@drawable/input_text_rounded"
            android:bottomLeftRadius="50dp"
            android:bottomRightRadius="15dp"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/phone_input"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="@dimen/layout_vertical_margin"
            android:background="@drawable/input_text_rounded"
            android:bottomLeftRadius="50dp"
            android:bottomRightRadius="15dp"
            android:ems="10"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/input_text_rounded"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Register Button -->
    <Button
        android:id="@+id/submit_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_above="@id/back_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_color"
        android:text="@string/btn_submit"
        android:textColor="@android:color/white" />

    <!-- Back Button -->
    <Button
        android:id="@+id/back_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:background="@drawable/button_color"
        android:text="@string/btn_back"
        android:textColor="@android:color/white" />
</RelativeLayout>