<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg_gradient"
    android:fitsSystemWindows="true"
    tools:context=".activity.MenuActivity" >

    <LinearLayout
        android:id="@+id/credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_welcome"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/credentials"
        android:layout_above="@id/logout_button"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/layout_vertical_margin"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_profile"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/layout_vertical_margin"
            android:background="@drawable/button_color_selection"
            android:text="@string/placeholder_1"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/layout_vertical_margin"
            android:background="@drawable/button_color_selection"
            android:text="@string/placeholder_2"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/button_color_selection"
            android:text="@string/placeholder_3"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <Button
        android:id="@+id/logout_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:background="@drawable/button_color"
        android:text="@string/btn_logout"
        android:textColor="@android:color/white" />
</RelativeLayout>