<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg_gradient"
    android:fitsSystemWindows="true"
    tools:context=".activity.AddCarRegistrationActivity">

    <TextView
        android:id="@+id/talon_msg"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/msg_talon_upload"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/imagePreviewTalon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/talon_msg"
        android:layout_above="@id/choose_button_talon"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/shadow_gradient"
        android:contentDescription="@null"/>

    <Button
        android:id="@+id/choose_button_talon"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_above="@id/upload_button_talon"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_color"
        android:text="@string/choose"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/upload_button_talon"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:background="@drawable/button_color"
        android:text="@string/upload"
        android:textColor="@android:color/white" />
</RelativeLayout>