<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg_gradient"
    android:fitsSystemWindows="true"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="360dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/logo"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/log_in_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/log_in_button"
        android:layout_below="@id/imageView"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <LinearLayout
            android:id="@+id/phone_remember"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="@dimen/layout_vertical_margin"
            android:background="@drawable/input_text_rounded"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/email_input"
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/text_size" />

            <Switch
                android:id="@+id/rem_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/SCBSwitch" />
        </LinearLayout>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/input_text_rounded"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <!-- Login Button -->
    <Button
        android:id="@+id/log_in_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_above="@id/register_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_color"
        android:text="@string/btn_login"
        android:textColor="@android:color/white" />

    <!-- Register Button -->
    <Button
        android:id="@+id/register_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:background="@drawable/button_color"
        android:text="@string/btn_register"
        android:textColor="@android:color/white" />
</RelativeLayout>